--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -5,7 +5,18 @@
     top: 0%;
     bottom: 99.89%;
 
-    /* Dark 7 */
     background: #EBEEF0;
     transform: rotate(90deg);
+}
+
+.righttr{
+    position: absolute;
+    width: 96vw;
+    right: -19.999%;
+    top: 0%;
+    bottom: 99.89%;
+
+
+    background: #EBEEF0;
+    transform: rotate(-90deg);
 }
